fix marquee z-index

--- a/themes/93degres/assets/css/components/grid.sass
+++ b/themes/93degres/assets/css/components/grid.sass
@@ -28,6 +28,7 @@
 	float: none
 	vertical-align: top
 	margin-bottom: 6.25%
+	z-index: 1
 
 	+media-sm-and-less
 		margin-bottom: 60px
