--- a/themes/93degres/assets/css/components/template-parts.sass
+++ b/themes/93degres/assets/css/components/template-parts.sass
@@ -70,6 +70,9 @@
 	.full-width
 		margin-bottom: 4.16%
 		float: left
+
+		blockquote
+			padding: 8.33% 0
 		
 	.un-tiers
 
@@ -77,4 +80,4 @@
 			img
 				width: 100%
 
-	.blocqkquote
+		
