--- a/themes/93degres/assets/css/components/theme.sass
+++ b/themes/93degres/assets/css/components/theme.sass
@@ -14,7 +14,7 @@ h2
 h3 
 	font-family: $cormorant
 	font-size: 4vw
-	line-height: 5vw
+	line-height: 5.25vw
 	font-weight: 200
 	letter-spacing: -0.03em
 	color: $color-dark
