--- a/themes/93degres/assets/css/pages/homepage.sass
+++ b/themes/93degres/assets/css/pages/homepage.sass
@@ -5,6 +5,7 @@
 #first-post 
 	font-size: 0
 	min-height: 70vh
+	z-index: -1
 
 	&-texte
 		display: inline-block
